Added basic partner credential tests and performed some minor code cleanup (#5)